# Talk2u

./: README.md  flutter_rust_bridge.yaml  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
docs/: emotion_aware_rag_paper.tex
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/models/: character.dart
lib/src/pages/: character_edit_page.dart  character_list_page.dart  chat_page.dart  conversation_list_page.dart  log_viewer_page.dart  settings_page.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/state/: chat_state.dart
lib/src/widgets/: chat_input.dart  message_bubble.dart  thinking_block.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: chat_api.rs  chat_engine.rs  chat_logger.rs  cognitive_engine.rs  config_manager.rs  conversation_store.rs  data_models.rs  error_handler.rs  jwt_auth.rs  knowledge_store.rs  memory_engine.rs  mod.rs  saydo_detector.rs  streaming_handler.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_talk2u.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_talk2u.podspec
rust_builder/windows/: CMakeLists.txt
test/state/: chat_state_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+7 files in other folders)
