[package]
name = "rust_lib_talk2u"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
sha2 = "0.10"
base64url = "0.1"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
rmp-serde = "1"
bincode = "1"

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
tempfile = "3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
